# brew-control

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
firmware/: README.md  manifest.json
main/: CMakeLists.txt  brew_control.c  brew_control.h  brewcontrol.c  idf_component.yml  ota_update.c  ota_update.h  profile_store.c  profile_store.h  telemetry.c  telemetry.h  temp_sensor.c  temp_sensor.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
main/web/: index.html
