idf_component_register(
    SRCS
        "brewcontrol.c"
        "brew_control.c"
        "wifi_ap.c"
        "web_server.c"
        "profile_store.c"
        "ota_update.c"
        "telemetry.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_http_server
        esp_timer
        esp_system
        app_update
        esp_app_format
        esp_https_ota
        esp_http_client
        esp-tls
        mbedtls
        mqtt
        cjson
    EMBED_FILES
        "web/index.html"
)
